# ergani-python-sdk

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
docs/source/: conf.py  index.rst
ergani/: auth.py  client.py  exceptions.py  models.py  typings.py  utils.py
