[tool.poetry]
name = "ergani"
version = "0.1.0"
description = "Python SDK for the Greek government's Ergani API"
authors = ["Paris Kasidiaris <paris@withlogic.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
